# tui-file-explorer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  justfile  rules.md  theme_switcher.rs
.gitea/workflows/: ci.yml  deps-update.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deps-update.yml  release.yml
.zed/: agents.md  rules.md
examples/: basic.rs  create_entries.rs  dual_pane.rs  editor_picker.rs  full.rs  open_file.rs  options.rs  theme_switcher.rs
examples/vhs/: basic.tape  create_entries.tape  dual_pane.tape  editor_picker.tape  file_ops.tape  filter.tape  options.tape  pane_toggle.tape  search.tape  sort.tape  theme_switcher.tape
scripts/: bump_version.nu  bump_version.sh  check_publish.nu  check_publish.sh  release_prepare.nu  version.nu
scripts/tests/: run_all.nu  test_bump_version.nu  test_release_prepare.nu  test_version.nu
src/: app.rs  doctor.rs  dual_pane.rs  explorer.rs  fs.rs  info.rs  lib.rs  main.rs  palette.rs  persistence.rs  persistence_tests.rs  render.rs  shell_init.rs  types.rs  ui.rs
tests/: cli_integration.rs
